[project]
name = "cuemcp"
version = "0.1.0"
description = "Cue MCP server/adapter"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "nmhjklnm" }]
dependencies = [
  "fastmcp",
  "mcp",
  "sqlmodel",
  "prompt_toolkit",
]

[project.scripts]
cuemcp = "cuemcp.server:main"
cuemcp-sim = "cuemcp.vscode_simulator:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cuemcp"]
